Closed Bug 652422 Opened 14 years ago Closed 14 years ago

TI: [infer failure] Missing type at #3:00035 pushed 0: string

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: crash, testcase)

The following code crashes on TI revision 90a7b141e0cf (run with options -m -n -a), tested on 32 bit:

(function() {
    var o = {};
    with (o) o='recorder not started, ';
    ('arguments' in o, false,
                  "property deletion observable")
})()
This is a TM issue with NAME accesses that should get fixed as part of bug 651966 --- NAME opcodes within a script which can alias locals don't mark those locals as escaping.  This can happen in scripts using 'with', which confused the SSA analysis; the fix just disables tracking of SSA values for variables in scripts which use 'with'.  This could be improved once bug 651966 is finished.

http://hg.mozilla.org/projects/jaegermonkey/rev/8f0c5e12eba9
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/bug652422.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.