[INFER] Don't track SSA values for locals in scripts containing 'with', bug 652422.